...
            Button(
                onClick = navigateToCreateJob,
                colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent),
                contentPadding = PaddingValues(0.dp),
                shape = RoundedCornerShape(16.dp),
                modifier = Modifier
                    .semantics { contentDescription = "Create new job" }
            ) {
                Box(
                    modifier = Modifier
                        .background(
                            brush = Brush.linearGradient(
                                colors = listOf(BtIndigo, BtMagenta)
...
